Correct bag with home image on mobile devices

--- a/src/components/Home/Home-media.scss
+++ b/src/components/Home/Home-media.scss
@@ -897,26 +897,23 @@
 
 @media (max-width: 610px) {
     .Home {
-
         .first-slide-container {
             display: flex;
             position: relative;
             height: 100%;
-            width: 100%;
-        }
+            max-width: 100%;
+            overflow: hidden;
 
-        .first-slide-container h1 {
-            font-size: 1.7rem;
         }
 
         .image-block {
-            width: 100%;
+            max-width: 100%;
             height: 100%;
         }
 
         .text-block-blur {
             width: 60%;
-            height: 60%;
+            height: 65%;
             margin-top: 50px;
         }
 
@@ -925,7 +922,7 @@
             z-index: 2;
             float: right;
             background-color: #CA0B03;
-            //margin-left: 550px;
+            margin-left: 550px;
             height: 60%;
             margin-top: 50px;
             margin-left: 93%;
@@ -962,7 +959,7 @@
         .fifth-text-block h1 {
             color: #CA0B03;
             font-family: "Yeseva One";
-            font-size: 1.7rem;
+            font-size: 1.6rem;
             font-weight: 650;
             padding-top: 5%;
             text-align: left;
@@ -1001,7 +998,7 @@
     .sixth-slide-container h1 {
         color: #ffffff;
         font-family: "Yeseva One";
-        font-size: 1.7rem;
+        font-size: 1.6rem;
         font-weight: 650;
         padding-left: 15%;
         padding-right: 15%;
@@ -1050,7 +1047,7 @@
                 .second-red-block h1 {
                     color: #fff;
                     font-family: "Yeseva One";
-                    font-size: 1.7rem;
+                    font-size: 1.6rem;
                     font-weight: 650;
                     padding-left: 20%;
                     padding-right: 10%;
@@ -1084,11 +1081,12 @@
         width: 50%;
         float: right;
         height: 100%;
+        position: relative;
     }
 
     .third-image-block img {
         width: 100%;
-        height: 100%;
+        max-height: 100%;
     }
 
     .third-text-block {
@@ -1101,7 +1099,7 @@
     .third-slide-container h1 {
         color: #fff;
         font-family: "Yeseva One";
-        font-size: 1.7rem;
+        font-size: 1.6rem;
         font-weight: 650;
         padding-left: 15%;
         padding-right: 10%;
@@ -1158,7 +1156,7 @@
     .fourth-slide-container h1 {
         color: #fff;
         font-family: "Yeseva One";
-        font-size: 1.7rem;
+        font-size: 1.6rem;
         font-weight: 650;
         padding-left: 20%;
         padding-right: 20%;
